# jackAudio4Java

./: README.md  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
java/: .gitignore  build.gradle  build.gradle.kts  settings.gradle
java/src/main/java/jackAudio4Java/: InternalAudioSlice.java  InternalClientHandle.java  InternalPortHandle.java  Jack.java  Library.java  NativeManager.java  NotYetImplementedException.java  Server.java
java/src/main/java/jackAudio4Java/buffers/: AudioSlice.java  ImmutableAudioSlice.java  ImmutableAudioSliceImpl.java  InternalAudioSlice.java  Manager.java  MutableAudioSlice.java  MutableAudioSliceImpl.java
java/src/main/java/jackAudio4Java/types/: ClientHandle.java  Int.java  OpenOption.java  OpenOptions.java  OpenStatus.java  PortFlag.java  PortFlags.java  PortHandle.java  PortType.java  ProcessListener.java  ShutdownListener.java  Status.java
java/src/main/java/jackAudio4Java/utilities/: NotYetImplementedException.java  SuppressFBWarnings.java
java/src/test/java/jackAudio4Java/: InternalPortHandleTest.java  JackBasicTest.java  JackClientTest.java  JackTest.java  Jack_Level_0_Tests.java  Jack_Level_1_Tests.java  Jack_Level_2_Tests.java  LibraryTest.java  ServerTest.java
java/src/test/java/jackAudio4Java/types/: PortFlagTest.java
linux/: .gitignore  CMakeLists.txt  README.md  build.gradle
linux/cmake/Modules/: FindJACK.cmake
linux/docs/: Doxyfile
linux/src/: CMakeLists.txt  Jack.cpp  Jack.h  Server.cpp  Server.h  about_data_conversions.md  inprocess.c  jackAudio4Java_Server.cpp  server.cpp  types_Int.cpp  types_Int.h  utils.cpp  utils.h
linux/src/jni_headers/: .gitignore  jackAudio4Java_Server.h
linux/tests/: CMakeLists.txt
linux/tests/lib/jnimock/: README.md
linux/tests/unit_tests/: CMakeLists.txt  test_Jack.cpp  test_JackClient.cpp  test_Server.cpp  test_jackAudio4Java_types_Int.cpp  test_level2_JackPorts.cpp  test_server.cpp  test_types_Int.cpp  test_utils.cpp
